# app_fortress

./: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  app_fortress_native.c
android/src/main/kotlin/com/app/fortress/: AppFortressPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/app_fortress_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: PrivacyInfo.xcprivacy  app_fortress.podspec
ios/Classes/: AppFortressPlugin.swift
lib/: app_fortress.dart
lib/src/: app_fortress.dart  app_fortress_method_channel.dart  app_fortress_platform_interface.dart
lib/src/models/: attestation_result.dart  device_security_info.dart  security_config.dart  security_status.dart  security_threat.dart
lib/src/protection/: ssl_pinning.dart  string_encryption.dart
lib/src/widgets/: security_gate.dart
